# linux

./: create_users_vm1.sh  create_users_vm2.sh  set_permissions_vm1.sh  set_permissions_vm2.sh
back/: .gitignore  Dockerfile  Dockerfile2  README.md  alembic.ini  dapmeet_reminder_email.html  docker-compose.yaml  gen_token.py  output.txt  pyproject.toml  pytest.ini  requirements.txt  run.py  run_migrations.py  send_emails.py  startup.sh  test_async.db  users.csv
back/.cursor/rules/: rules.mdc
back/.github/workflows/: deploy.yml
back/alembic/: env.py
back/alembic/versions/: 2025_01_27_0000_add_prompts_table.py  2025_01_27_0001_initial_state.py  2025_01_27_0002_add_performance_indexes.py  2025_08_23_1248-cbb40db1ed4c_new.py  2025_09_19_1102-15aaab98bda8_idk.py  2025_10_10_1703-0f8909d899c6_add_prompt_type_index_for_performance.py  2025_10_13_1330-3eb55c7d589f_add_analytics_performance_indexes.py  2025_11_03_1445-increase_segment_column_sizes.py  2025_11_21_2008-add_subscription_tables.py  2025_11_24_1137-set_all_users_premium.py  2025_11_24_1248-15594b2c06d4_add_subscription_plan_to_meetings_if_.py  2025_11_24_1250-93c984ee8d62_fix_subscriptions_table_structure.py  2025_11_24_1309-0ccfa50b3519_ensure_subscription_history_table_exists.py
back/docs/: ADMIN_DEVELOPER_RULES.md  ADMIN_DEV_QUICK_REFERENCE.md  architecture.md  data_flow_diagram.md  decoding_mapping.md  logs.txt  unit-test-core.md
back/src/dapmeet/api/: admin.py  (+9 more)
back/tests/: conftest.py  factories.py  test_auth_api.py  test_chat_api.py  test_meetings_api.py  test_user_prompts_api.py  test_whisper_api.py
(+215 files in other folders)
